2024-05-17  Version 4.1.0-Classic/Cata
---------------------------------
Add ~all Horde flight times. Boy, are my arms tired!


2024-05-12  Version 4.0.0-Classic/Cata
---------------------------------
Fix later Wrath/Cata LUA errors, sorry...
Add Cata times & FP changes
Undo Hardcode for Azeroth TBC zones except Silvermoon/Exodar
Timer Bar is broken, does anyone know how to fix it?


2021-05-31  Version 3.2.0-Classic/TBC
---------------------------------
Lots of CHanges!
Add all BCC Flight Nodes and timers
Approx Horde Classic Flight Points
Fix /efm open and /efm config
Hack to allow positions on new Azeroth zones
Stop saving reachable flightpoints, they are always calculated
FanUpdate by beren12


2019-09-23  Version 3.1.0-Classic
---------------------------------
- Fix issue #5 on github, druid flightpaths now tracks and is configured.


2019-09-23  Version 3.1.0-Classic
---------------------------------
- Fix issue #3 on github, zone map flight points not showing as known/unknown.
- Add enhancement, per issue #4 on github, add flight node markers to the world map.
- Initial preload data import, much of the information is currently missing in the dataset, but hey at least there's something now...


2019-09-20  Version 3.0.0-Classic
---------------------------------
- Update EFM to work with WoW Classic.


2012-10-23  Version 2.2.8
-------------------------
- Make new offline map window closable with the escape key (Google Code Issue# 19).



2012-10-22  Version 2.2.7
-------------------------
- Added code to fix issue where code was assuming a flight node a specific location could only occur in one continent, now we validate continent on node lookup.
- Code cleanup, remove commented code blocks that where legacy for bug fixes, and add some missing comments, still more need adding.
- Re-added function to delete all data related to a node.


2012-10-19  Version 2.2.6
-------------------------
- Fix errors in FrameXML Log (Binding Header).